--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -7,3 +7,140 @@
     animation: none;
     -webkit-tap-highlight-color: transparent;
 }
+
+body{
+    background-color: #000000;
+    overflow-x: hidden;
+    width: 100%;
+    height: auto;
+}
+
+.main__content-login{
+    display: flex;
+    flex-flow: column nowrap;
+    color: #ffffff;
+    width: 100%;
+    height: 100dvh;
+    overflow-x: hidden;
+}
+
+.content__login{
+    display: flex;
+    flex-flow: row nowrap;
+    color: #ffffff;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.login__form-wrapper, .form__inputs{
+    display: flex;
+    flex-flow: column nowrap;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 17rem;
+}
+
+.content__login-form{
+    text-align: -webkit-center;
+    text-align: center;
+    padding: 1rem;
+}
+
+.content__login-form img{
+    width: 100%;
+    max-width: 11rem;
+}
+
+.form__inputs input{
+    width: 100%;
+    max-width: 14.5rem;
+    height: 1.6rem;
+    border-radius: 0.3rem;
+    border: 0.3px solid #b3b3b3;
+    margin: 1rem 0.3rem 0rem;
+    padding: 0.2rem 0.7rem;
+    background-color: rgba(18, 18, 18, 1);
+    color: white;
+}
+
+.form__inputs input::placeholder{
+    color: rgba(168, 168, 168, 1);
+}
+
+.form__inputs button{
+    width: 100%;
+    border-radius: 0.4rem;
+    border: none;
+    padding: 0.4rem;
+    font-weight: 600;
+    background-color: rgba(52, 65, 175, 1);
+    color: rgba(255, 255, 255, 0.7);
+    margin-top: 1.5rem;
+}
+
+.content__login-space{
+    width: 12rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    margin: 1.5rem 0;
+}
+
+.trace-line{
+    height: 0.8px;
+    width: 100%;
+    background-color: rgba(38, 38, 38, 1);
+    margin: 0px 1rem;
+}
+
+.login__alternative, .login__alternative-facebook{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.login__alternative-facebook{
+    flex-direction: row;
+    color: rgba(0, 149, 246, 1);
+    font-weight: 600;
+    font-size: 0.9rem;
+    margin-bottom: 0.8rem;
+}
+
+.login__alternative-facebook svg{
+    margin-right: 0.5rem;
+}
+
+.login__alternative-facebook:hover, .login__alternative a:nth-child(2):hover, .login__signin a:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.login__alternative a:nth-child(2){
+    color: #ffffff;
+}
+
+
+.login__signin, .login__signin a{
+    color: white;
+}
+
+.login__signin{
+    margin-top: 2rem;
+}
+
