Adding footer and mobile behavior

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -85,6 +85,7 @@ body{
     background-color: rgba(52, 65, 175, 1);
     color: rgba(255, 255, 255, 0.7);
     margin-top: 1.5rem;
+    cursor: pointer;
 }
 
 .content__login-space{
@@ -147,7 +148,7 @@ body{
     width: 39rem;
     height: 31rem;
     max-width: 630px;
-    max-height: 500px;
+    max-height: 280px;
     display: block;
     margin: 0 auto;
     position: relative;
@@ -168,29 +169,33 @@ body{
 .carrossel_img-1{
     background-image: url("../images/img-1.png");
     transition: 1s ease-in-out;
-    max-width: 570px;
+    max-width: 370px;
     z-index: -1;
+    justify-self: anchor-center;
 }
 
 .carrossel_img-2{
     background-image: url("../images/img-2.png");
     transition: 1s ease-in-out;
-    max-width: 570px;
+    max-width: 370px;
     z-index: -2;
+    justify-self: anchor-center;
 }
 
 .carrossel_img-3{
     background-image: url("../images/img-3.png");
     transition: 1s ease-in-out;
-    max-width: 570px;
+    max-width: 370px;
     z-index: -3;
+    justify-self: anchor-center;
 }
 
 .carrossel_img-4{
     background-image: url("../images/img-4.png");
     transition: 1s ease-in-out;
-    max-width: 570px;
+    max-width: 370px;
     z-index: -4;
+    justify-self: anchor-center;
 }
 
 .carrossel_img-move-back{
@@ -209,7 +214,7 @@ body{
         z-index: 9;
     }
     90%{
-        transform: translateX(-25rem);
+        transform: translateX(-15rem);
         opacity: 1;
     }
     100%{
@@ -248,4 +253,43 @@ body{
 
 .carrossel_img-move-back {
   animation: goLeft 4s ease-in-out forwards;
+}
+
+.footer ul{
+    margin: 5rem 1rem 2rem 1rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    gap: 1.8rem;
+}
+
+.footer ul li:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.rights{
+    padding: 1rem;
+    text-align: -webkit-center;
+    text-align: center;
+}
+
+
+@media screen and (max-width: 906px) {
+    .content__login-carrossel-wrapper{
+        max-width: 400px;
+    }
+
+    .content__login{
+        margin-top: 5rem;
+    }
+}
+
+@media screen and (max-width: 760px) {
+    .content__login-carrossel{
+        display: none;
+    }
 }
