--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -90,6 +90,11 @@ body{
     color: rgba(255, 255, 255, 0.7);
     margin-top: 1.5rem;
     cursor: pointer;
+    transition: 0.1s ease-in-out;
+}
+
+.form__inputs button:hover{
+    background-color: rgb(80, 90, 180);
 }
 
 .content__login-space{
